--- a/index.html
+++ b/index.html
@@ -470,9 +470,9 @@
                 &copy; 2025 TradeLog Pro. Built for traders, by traders.
             </div>
             <div class="flex gap-6 text-sm text-gray-500">
-                <a href="#" class="hover:text-white transition-colors">Privacy</a>
-                <a href="#" class="hover:text-white transition-colors">Terms</a>
-                <a href="#" class="hover:text-white transition-colors">Twitter</a>
+                <a href="https://docs.google.com/document/d/1ZFrUWATSiZWG_EA_HQBf0YP_2Y6egyrG-fILkvvv128/edit?usp=sharing" class="hover:text-white transition-colors">Privacy</a>
+                <a href="https://docs.google.com/document/d/1B8i_ZJIzdZH5bVjOE8oV92KMywCUh0UY52zWbIEdnpM/edit?usp=sharing" class="hover:text-white transition-colors">Terms</a>
+                <a href="https://x.com/tradelogpro" class="hover:text-white transition-colors">Twitter</a>
             </div>
         </div>
     </footer>
